Adding ability to get pod logs from the system
