# pkg/resource/pod/channels.go
@@ -2,6 +2,7 @@ package pod
 
 import (
 	"context"
+	"io"
 
 	v1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
@@ -42,4 +43,44 @@ func GetPodsListChannel(client client.Interface, namespace *string, labelselecto
 	}()
 
 	return channel
+}
+
+/**
+  GetPodsLogsChannel
+  Routine return pods channel to fetch logs based input
+**/
+func GetPodsLogsChannel(client client.Interface, namespace *string, pod *string, container *string) (*string, error) {
+
+	podLogOptions := v1.PodLogOptions{
+		Container: *container,
+		Follow:    true,
+	}
+
+	podLogRequest := client.CoreV1().Pods(*namespace).GetLogs(*pod, &podLogOptions)
+
+	stream, err := podLogRequest.Stream(context.TODO())
+	if err != nil {
+		return nil, err
+	}
+
+	defer stream.Close()
+
+	var logBlobData string
+	for {
+		buf := make([]byte, 2000)
+		numBytes, err := stream.Read(buf)
+		if numBytes == 0 {
+			continue
+		}
+		if err == io.EOF {
+			break
+		}
+		if err != nil {
+			return nil, err
+		}
+		logBlobData = string(buf[:numBytes])
+		// fmt.Print(logBlobData)
+	}
+
+	return &logBlobData, nil
 }
