# pkg/resource/pod/common.go
@@ -8,6 +8,7 @@ import (
 type Resource interface {
 	ListPods(namespace *string, selectors *map[string]string) (*v1.PodList, error)
 	ListPodsDetailByService(namespace *string, service *string) (*PodDto, error)
+	GetPodLogsBlob(namespace *string, pod *string, container *string) (*string, error)
 }
 
 type resource struct {
